# advent_of_code

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt
src/2015/: CMakeLists.txt
src/2015/day_01/: CMakeLists.txt  aoc_2015_1_1.cc  aoc_2015_1_2.cc
src/2015/day_02/: CMakeLists.txt  aoc_2015_2_1.cc  aoc_2015_2_2.cc
src/2015/day_03/: CMakeLists.txt  aoc_2015_3_1.cc  aoc_2015_3_2.cc
src/2015/day_04/: CMakeLists.txt  aoc_2015_4_1.cc  aoc_2015_4_2.cc
src/2015/day_05/: CMakeLists.txt  aoc_2015_5_1.cc  aoc_2015_5_2.cc
src/2015/day_06/: CMakeLists.txt  aoc_2015_6_1.cc  aoc_2015_6_2.cc
src/2015/day_07/: CMakeLists.txt  aoc_2015_7_1.cc  aoc_2015_7_2.cc
src/2015/day_08/: CMakeLists.txt  aoc_2015_8_1.cc  aoc_2015_8_2.cc
src/2015/day_09/: CMakeLists.txt  aoc_2015_9_1.cc  aoc_2015_9_2.cc
src/2015/day_10/: CMakeLists.txt  aoc_2015_10_1.cc  aoc_2015_10_2.cc
src/2015/day_11/: CMakeLists.txt  aoc_2015_11_2.cc
src/2015/day_12/: CMakeLists.txt  aoc_2015_12_1.cc  aoc_2015_12_2.cc
src/2015/day_13/: CMakeLists.txt  aoc_2015_13_1.cc  aoc_2015_13_2.cc
src/2015/day_14/: CMakeLists.txt  aoc_2015_14_1.cc  aoc_2015_14_2.cc
src/2015/day_15/: CMakeLists.txt  aoc_2015_15_1.cc  aoc_2015_15_2.cc
src/2015/day_16/: CMakeLists.txt  aoc_2015_16_1.cc  aoc_2015_16_2.cc
src/2015/day_17/: CMakeLists.txt  aoc_2015_17_1.cc  aoc_2015_17_2.cc
src/2015/day_18/: CMakeLists.txt  aoc_2015_18_1.cc  aoc_2015_18_2.cc
src/2015/day_19/: CMakeLists.txt  aoc_2015_19_1.cc  aoc_2015_19_2.cc
src/2015/day_20/: CMakeLists.txt  aoc_2015_20_1.cc  aoc_2015_20_2.cc
src/2015/day_21/: CMakeLists.txt  aoc_2015_21_1.cc  aoc_2015_21_2.cc
src/2015/day_22/: CMakeLists.txt  aoc_2015_22_1.cc  aoc_2015_22_2.cc
src/2015/day_23/: CMakeLists.txt  aoc_2015_23_1.cc  aoc_2015_23_2.cc
src/2015/day_24/: CMakeLists.txt  aoc_2015_24_1.cc  aoc_2015_24_2.cc
src/2015/day_25/: CMakeLists.txt  aoc_2015_25_1.cc
src/2016/: CMakeLists.txt
src/2016/day_01/: CMakeLists.txt  aoc_2016_1_1.cc  aoc_2016_1_2.cc
src/2016/day_02/: CMakeLists.txt  aoc_2016_2_1.cc  aoc_2016_2_2.cc
src/2016/day_03/: CMakeLists.txt  aoc_2016_3_1.cc  aoc_2016_3_2.cc
src/2016/day_04/: CMakeLists.txt  aoc_2016_4_1.cc  aoc_2016_4_2.cc
src/2016/day_05/: CMakeLists.txt  aoc_2016_5_1.cc  aoc_2016_5_2.cc
src/2016/day_06/: CMakeLists.txt  aoc_2016_6_1.cc  aoc_2016_6_2.cc
src/2016/day_07/: CMakeLists.txt  aoc_2016_7_1.cc  aoc_2016_7_2.cc
src/2016/day_08/: CMakeLists.txt  aoc_2016_8_1.cc  aoc_2016_8_2.cc
src/2016/day_09/: CMakeLists.txt  aoc_2016_9_1.cc  aoc_2016_9_2.cc
src/2016/day_10/: CMakeLists.txt  aoc_2016_10_1.cc  aoc_2016_10_2.cc
src/2016/day_11/: CMakeLists.txt  aoc_2016_11_1.cc  aoc_2016_11_2.cc
src/2016/day_12/: CMakeLists.txt  aoc_2016_12_1.cc  aoc_2016_12_2.cc
src/2016/day_13/: CMakeLists.txt  aoc_2016_13_1.cc  aoc_2016_13_2.cc
src/2016/day_14/: CMakeLists.txt  aoc_2016_14_1.cc  aoc_2016_14_2.cc
src/2016/day_15/: CMakeLists.txt  aoc_2016_15_1.cc
src/2016/day_16/: CMakeLists.txt  aoc_2016_16_1.cc  aoc_2016_16_2.cc
src/2016/day_17/: CMakeLists.txt  aoc_2016_17_1.cc  aoc_2016_17_2.cc
src/2016/day_18/: CMakeLists.txt  aoc_2016_18_1.cc  aoc_2016_18_2.cc
src/2016/day_19/: CMakeLists.txt  aoc_2016_19_1.cc  aoc_2016_19_2.cc
src/2016/day_20/: CMakeLists.txt  aoc_2016_20_1.cc  aoc_2016_20_2.cc
src/2016/day_21/: CMakeLists.txt  aoc_2016_21_1.cc  aoc_2016_21_2.cc
src/2016/day_22/: CMakeLists.txt  aoc_2016_22_1.cc  aoc_2016_22_2.cc
src/2016/day_23/: CMakeLists.txt  aoc_2016_23_1.cc  aoc_2016_23_2.cc
src/2016/day_24/: CMakeLists.txt  aoc_2016_24_1.cc  aoc_2016_24_2.cc
src/2016/day_25/: CMakeLists.txt  aoc_2016_25_1.cc
src/2017/: CMakeLists.txt
src/2017/day_01/: CMakeLists.txt  aoc_2017_1_1.cc  aoc_2017_1_2.cc
src/2017/day_02/: CMakeLists.txt  aoc_2017_2_1.cc  aoc_2017_2_2.cc
src/2017/day_03/: CMakeLists.txt  aoc_2017_3_1.cc  aoc_2017_3_2.txt
src/2017/day_04/: CMakeLists.txt  aoc_2017_4_1.cc  aoc_2017_4_2.cc
src/2017/day_05/: CMakeLists.txt  aoc_2017_5_1.cc
src/2017/day_06/: CMakeLists.txt  aoc_2017_6_1.cc  aoc_2017_6_2.cc
src/2017/day_07/: CMakeLists.txt  aoc_2017_7_1.cc  aoc_2017_7_2.cc
src/2017/day_08/: CMakeLists.txt  aoc_2017_8_1.cc  aoc_2017_8_2.cc
src/2017/day_09/: CMakeLists.txt  aoc_2017_9_1.cc  aoc_2017_9_2.cc
src/2017/day_10/: CMakeLists.txt  aoc_2017_10_1.cc  aoc_2017_10_2.cc
src/2017/day_11/: CMakeLists.txt  aoc_2017_11_1.cc  aoc_2017_11_2.cc
src/2017/day_12/: CMakeLists.txt  aoc_2017_12_1.cc  aoc_2017_12_2.cc
src/2017/day_13/: CMakeLists.txt  aoc_2017_13_1.cc  aoc_2017_13_2.cc
src/2017/day_14/: CMakeLists.txt  aoc_2017_14_1.cc  aoc_2017_14_2.cc
src/2017/day_15/: CMakeLists.txt  aoc_2017_15_1.cc  aoc_2017_15_2.cc
src/2017/day_16/: CMakeLists.txt  aoc_2017_16_1.cc  aoc_2017_16_2.cc
src/2017/day_17/: CMakeLists.txt  aoc_2017_17_1.cc  aoc_2017_17_2.cc
src/2017/day_18/: CMakeLists.txt  aoc_2017_18_1.cc  aoc_2017_18_2.cc
src/2017/day_19/: CMakeLists.txt  aoc_2017_19_1.cc  aoc_2017_19_2.cc
src/2017/day_20/: CMakeLists.txt  aoc_2017_20_1.cc  aoc_2017_20_2.cc
src/2017/day_21/: CMakeLists.txt  aoc_2017_21_1.cc  aoc_2017_21_2.cc
src/2017/day_22/: CMakeLists.txt  aoc_2017_22_1.cc  aoc_2017_22_2.cc
src/2017/day_23/: CMakeLists.txt  aoc_2017_23_1.cc  aoc_2017_23_2.cc
src/2018/: CMakeLists.txt
src/2019/: CMakeLists.txt
src/2020/: CMakeLists.txt
src/2021/: CMakeLists.txt
src/2022/: CMakeLists.txt
src/2023/: CMakeLists.txt
src/day_02/: aoc_2_2.cc
src/day_04/: CMakeLists.txt
src/day_06/: CMakeLists.txt
src/day_08/: CMakeLists.txt
src/day_09/: aoc_9_2.cc
src/day_1/: CMakeLists.txt  aoc_1_1.cc  aoc_1_2.cc
src/day_10/: CMakeLists.txt  aoc_10_2.cc
src/day_11/: CMakeLists.txt  aoc_11_1.cc
src/day_12/: CMakeLists.txt  aoc_12_1.cc
src/day_2/: CMakeLists.txt
src/day_3/: CMakeLists.txt  aoc_3_1.cc  aoc_3_2.cc
src/day_4/: aoc_4_1.cc  aoc_4_2.cc
src/day_5/: CMakeLists.txt  aoc_5_1.cc
src/day_7/: CMakeLists.txt  aoc_7_1.cc  aoc_7_2.cc
src/day_8/: aoc_8_1.cc  aoc_8_2.cc
src/day_9/: CMakeLists.txt  aoc_9_1.cc
(+240 files in other folders)
