set(AOC_YEAR "2018")

add_subdirectory(day_01)
add_subdirectory(day_02)
add_subdirectory(day_03)
add_subdirectory(day_04)
add_subdirectory(day_05)
add_subdirectory(day_06)
add_subdirectory(day_07)
add_subdirectory(day_08)
add_subdirectory(day_09)
add_subdirectory(day_10)
add_subdirectory(day_11)
add_subdirectory(day_12)
add_subdirectory(day_13)
add_subdirectory(day_14)
add_subdirectory(day_16)
add_subdirectory(day_17)
add_subdirectory(day_18)
